Fix: Improve text wrapping in boxed containers and reviewer comments

--- a/public/paper.html
+++ b/public/paper.html
@@ -215,6 +215,12 @@
             margin: 20px 0;
         }
 
+        .boxed li {
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
+        }
+
         .boxed strong {
             display: block;
             font-size: 16px;
@@ -283,6 +289,12 @@
             background-color: rgba(0, 113, 227, 0.03);
             border-radius: 0 4px 4px 0;
             margin: 20px 0;
+        }
+
+        .reviewer-comment li {
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
 
         .reviewer-comment strong {
