Update paper.html with latest changes

--- a/public/paper.html
+++ b/public/paper.html
@@ -611,12 +611,12 @@
                             <img src="/framework.png" alt="Figure 2: The decomposed framework for identifying significant distinctions, which consists of three steps: (1) identify distinctions, (2) analyze argumentative roles of a distinction via legal knowledge hierarchy, and (3) identify significant distinctions. Red and blue presents the favoring side of the factors." style="max-width:80%;height:auto" />
                             <p><strong>Figure 2.</strong> The decomposed framework for identifying significant distinctions, which consists of three steps: (1) identify distinctions, (2) analyze argumentative roles of a distinction via legal knowledge hierarchy, and (3) identify significant distinctions. Red and blue presents the favoring side of the factors.</p>
                         </div>
-                        <div class="boxed">
+                        <!-- <div class="boxed">
                             <strong>Overview</strong>
                             <p>
                                 To enable a computable and verifiable evaluation of LLM capabilities, the paper formalizes the reasoning process. The core is defining the representation of cases and the legal knowledge hierarchy they operate within.
                             </p>
-                        </div>
+                        </div> -->
 
                         <h3>Case Representation</h3>
                         <dl>
@@ -965,7 +965,7 @@
                     </section>
                     
                     <section id="case-study">
-                        <h2>💡 One More Thing...</h2>
+                        <h2>💡 Case Study</h2>
                         <p>To provide a qualitative understanding of the models' reasoning processes, we analyze excerpts from the thinking traces of qwen3-thinking and gpt-oss-120b on one instance of Task 3. This analysis reveals stark differences in reasoning styles and efficiency.</p>
 
                         <h3>qwen3-thinking: A Verbose and Repetitive Process</h3>
