--- a/public/paper.html
+++ b/public/paper.html
@@ -559,7 +559,7 @@
                     </div>
 
                     <div class="links">
-                        <a href="https://arxiv.org/abs/2510.08710">[Paper]</a>
+                        <a href="https://arxiv.org/abs/2510.08710" target="_blank">[Paper]</a>
                         <a href="#citation">[Citation]</a>
                     </div>
                 </header>
