Update contact email in footer to liz239@pitt.edu

--- a/public/paper.html
+++ b/public/paper.html
@@ -1034,7 +1034,7 @@
                 <div class="footer-col footer-col-1">
                     <ul class="contact-list">
                         <li class="p-name">Li Zhang</li>
-                        <li><a class="u-email" href="mailto:lizhang@pitt.edu">lizhang@pitt.edu</a></li>
+                        <li><a class="u-email" href="mailto:liz239@pitt.edu">liz239@pitt.edu</a></li>
                     </ul>
                 </div>
                 <div class="footer-col footer-col-2">
